mise en place des vidéo

--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
             </div>
     </section>
     <section class="config_solu" id="test_SOLU">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/QrqnxQ3uTLU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/wd4llmYAqNs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/NQ1zbg3s2tk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
     <footer id="footer">
         <p>GROUP INSHOT</p>
